--- a/hugo.yaml
+++ b/hugo.yaml
@@ -7,7 +7,7 @@ enableGitInfo: true
 
 module:
   imports:
-    - path: github.com/oasci/crumblearn.org
+    - path: github.com/imfing/hextra
 
 
 markup:
